--- a/responsive/bootstrap/css/bs.css
+++ b/responsive/bootstrap/css/bs.css
@@ -19,6 +19,10 @@ h1 {
     padding: 0;
 }
 
+.navbar .container-fluid ul {
+    margin: 0;
+}
+
 footer {
     text-align: center;
     background-color: darkslategray;
